[gd_scene load_steps=2 format=2]

[ext_resource path="res://Effect.gd" type="Script" id=1]

[node name="Effect" type="Node2D"]
script = ExtResource( 1 )

[node name="EffectLabel" type="Label" parent="."]
margin_left = -5.0
margin_top = -5.0
margin_right = 7.0
margin_bottom = 9.0
text = "5"

[node name="TweenPosition" type="Tween" parent="."]

[node name="TweenScale" type="Tween" parent="."]
